# content_curator

./: .env.example  .gitignore  README.md  admin_view.py  config.yaml  main.py  pyproject.toml  todo.md
.github/workflows/: content_curator-run.yml
data/: rss_urls.txt  test.md
examples/: summarization_process.py
scripts/: delete_reset_metatable.sh  fix_summary_metadata.py  main.py  update_guids.py
src/content_curator/: aws_storage.py  config.py  models.py  utils.py
src/content_curator/curator/: __init__.py  newsletter_curator.py
src/content_curator/distributors/: __init__.py  aws_url_distributor.py  email_distributor.py  html_converter.py
src/content_curator/fetchers/: fetcher_base.py  fetcher_utils.py  rss_fetcher.py
src/content_curator/processors/: content_processor.py  markdown_processor.py
src/content_curator/storage/: __init__.py  dynamodb_state.py  s3_storage.py  utils.py
src/content_curator/summarizers/: brief_summary.txt  standard_summary.txt  summarizer.py
terraform/: README.md  main.tf
